/**
 * Reconstructed InnerTube message for browse request parameters.
 * 
 * @author Taniko Yamamoto <kirasicecreamm@gmail.com>
 * @author The Rehike Maintainers
 */

syntax = "proto3";

package com.youtube.innertube.request;

message BrowseRequestParams {
  // completely unknown fields (do not use)
  reserved 13, 23;

  // ? unknown field used for channel
  // search requests. Presumedly an unused
  // page parameter.
  optional int32 page = 1;

  optional string tab = 2;

  enum Sort {
    DEFAULT_SORT = 0;
    MOST_POPULAR = 1;
    OLDEST = 2;
    NEWEST = 3;
    LATEST = 4;
  }

  optional Sort sort = 3;

  // TODO
  //enum View {}

  //optional View view = 4;
  enum Flow {
    DEFAULT_FLOW = 0;
    GRID = 1;
    LIST = 2;
  }

  optional Flow flow = 6;

  enum LiveView {
    DEFAULT_LIVEVIEW = 0;
    ALL = 1;
    LIVE = 2;
    UPCOMING = 3;
    PAST = 4;
  }

  optional LiveView live_view = 7;

  optional int32 shelf_id = 14;

  // TODO, unreserve, this is documented
  reserved 15;
  
  optional ModernMetadata modern_metadata = 110;
}

message ModernMetadata {
  optional ModernWebParams web_params = 1;
  
  // 2 is certain mobile parameters, but we don't need them in Rehike.
  
  optional ModernContinuationParams continuation_params = 3;
}

message ModernWebParams {
  // Thanks to Prototaxis for this list.
  optional ModernBrowseAboutParams about_params = 2;
  optional ModernBrowseShoppingParams shopping_params = 3;
  optional ModernBrowseFeaturedParams featured_params = 6;
  optional ModernBrowseVideoParams videos_params = 7;
  optional ModernBrowsePlaylistParams playlist_params = 8;
  optional ModernBrowseCommunityParams community_params = 9;
  optional ModernBrowseChannelsParams channels_params = 10;
  optional ModernBrowseSearchParams search_params = 11;
  optional ModernBrowseLiveParams live_params = 15;
  optional ModernBrowseShortsParams shorts_params = 19;
  optional ModernBrowseReleasesParams releases_params = 22;
  optional ModernBrowsePodcastsParams podcasts_params = 23;
  optional ModernBrowseCoursesParams courses_params = 24;
}

message ModernContinuationParams {
  // An example is the about request in Rehike controllers/ChannelPageController.php.
  // This message is not done yet.
}

message ModernBrowseAboutParams {}
message ModernBrowseShoppingParams {}
message ModernBrowseFeaturedParams {}
message ModernBrowseVideoParams {
  optional BrowseRequestParams.Sort legacy_sort = 1;
  
  enum ModernSort {
    DEFAULT_SORT = 0;
    POPULAR = 2;
    LATEST = 4;
    OLDEST = 5;
  }
  
  optional ModernSort sort = 2;
}
message ModernBrowsePlaylistParams {}
message ModernBrowseCommunityParams {}
message ModernBrowseChannelsParams {}
message ModernBrowseSearchParams {}
message ModernBrowseLiveParams {}
message ModernBrowseShortsParams {}
message ModernBrowseReleasesParams {}
message ModernBrowsePodcastsParams {}
message ModernBrowseCoursesParams {}